--- a/main.html
+++ b/main.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script type="text/javascript" src="./script.js"></script>
+        <script type="text/javascript" src="./main.js"></script>
+        <script type="text/javascript" src="./ecs.js"></script>
+        <script type="text/javascript" src="./systems/physics.js"></script>
+        <script type="text/javascript" src="./systems/render.js"></script>
+        <script type="text/javascript" src="./player.js"></script>
     </head>
     <body>
         <div id="main"></div>
