--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
         <script type="text/javascript" src="./ecs.js"></script>
         <script type="text/javascript" src="./systems/physics.js"></script>
         <script type="text/javascript" src="./systems/render.js"></script>
+        <script type="text/javascript" src="./systems/timer.js"></script>
         <script type="text/javascript" src="./player.js"></script>
     </head>
     <body>
