--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@
         <script type="text/javascript" src="./systems/physics.js"></script>
         <script type="text/javascript" src="./systems/render.js"></script>
         <script type="text/javascript" src="./systems/timer.js"></script>
+        <script type="text/javascript" src="./systems/logger.js"></script>
         <script type="text/javascript" src="./player.js"></script>
     </head>
     <body>
